--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <aside class="sidebar">
         <div class="sidebar__inner">
             <h1 class="sidebar__name">Асхаб Хажиев</h1>
-            <p class="sidebar__position">Backend‑разработчик</p>
+            <p class="sidebar__position">Golang Developer</p>
 
             <div class="sidebar__block">
                 <h2 class="sidebar__title">Контакты</h2>
@@ -43,6 +43,11 @@
                     <span class="tag">Docker</span>
                     <span class="tag">Linux</span>
                     <span class="tag">Git</span>
+                    <span class="tag">gRPC</span>
+                    <span class="tag">OpenAPI/Swagger</span>
+                    <span class="tag">CI/CD</span>
+                    <span class="tag">Prometheus</span>
+                    <span class="tag">Grafana</span>
                     <span class="tag">JWT</span>
                     <span class="tag">Unit Testing</span>
                     <span class="tag">Clean Architecture</span>
@@ -52,35 +57,53 @@
     </aside>
 
     <main class="main">
+        <section class="section">
+            <h2 class="section__title">Summary</h2>
+            <article class="item">
+                <div class="item__meta">
+                    <span>Кратко обо мне</span>
+                </div>
+                <div class="item__content">
+                    <p>
+                        Backend‑разработчик на Go с 1 годом опыта создания сервисов и учебных проектов.
+                        Специализируюсь на проектировании распределённых и отказоустойчивых систем
+                        с использованием Kafka, RabbitMQ, Redis и PostgreSQL. Самостоятельно разработал
+                        и довёл до рабочего состояния 5+ бэкенд‑сервисов, включая асинхронный пайплайн
+                        обработки изображений и систему отложенных уведомлений, применяя принципы
+                        Clean Architecture и микросервисный подход.
+                    </p>
+                </div>
+            </article>
+        </section>
 
         <section class="section">
             <h2 class="section__title">
-                Опыт работы
+                Опыт
                 <span id="experience-total"></span>
             </h2>
+
             <article class="item" data-start="2025-01" data-end="now">
                 <div class="item__meta">
                     <span>Июнь 2024 — настоящее время</span>
                 </div>
 
                 <div class="item__content">
-
                     <div class="item__header">
-                        <h3 class="item__title">Проектная деятельность — pet‑проекты</h3>
-                        <p class="item__position">Backend‑разработчик</p>
+                        <h3 class="item__title">Личные проекты — Backend Developer (Golang)</h3>
+                        <p class="item__position">Учебные и pet‑проекты</p>
                     </div>
 
-                    <!-- 1. Comment Tree -->
+                    <!-- Comment Tree -->
                     <div class="subitem">
                         <h4 class="subitem__title">Comment Tree — сервис иерархических комментариев</h4>
                         <p class="subitem_subtitle">
-                            Разработал сервис для хранения и выборки вложенных комментариев с фокусом на производительность запросов.
+                            Сервис для хранения и выборки вложенных комментариев с фокусом на производительность запросов и удобство работы с длинными тредами.
                         </p>
                         <ul class="item__list">
-                            <li>Выбрал схему хранения древовидных комментариев, позволяющую эффективно работать с вложенными ветками.</li>
-                            <li>Оптимизировал выборки для сценариев: загрузка ветки, получение последних комментариев, вывод длинных тредов с пагинацией.</li>
-                            <li>Добавил сортировку и поиск по тексту, чтобы было проще работать с большими лентами обсуждений.</li>
-                            <li>Продумал API так, чтобы им было удобно пользоваться как фронтенду, так и внешним сервисам.</li>
+                            <li>Спроектировал и реализовал схему хранения древовидных данных на основе Materialized Path, что позволило получать ветку комментариев любой вложенности за один SQL‑запрос вместо серии рекурсивных выборок.</li>
+                            <li>Настроил индексы и оптимизировал основные запросы для сценариев: загрузка ветки, получение последних комментариев и пагинация длинных обсуждений, снизив нагрузку на БД при массовом чтении.</li>
+                            <li>Реализовал API с пагинацией и сортировкой, сократив объём передаваемых данных и упростив работу фронтенда с большими лентами обсуждений.</li>
+                            <li>Добавил поиск по тексту комментариев и фильтрацию по параметрам, что упростило навигацию по длинным дискуссиям.</li>
                         </ul>
                         <p class="item__stack">Стек: Go, PostgreSQL, Docker.</p>
                         <p class="subitem__link">
@@ -88,17 +111,17 @@
                         </p>
                     </div>
 
-                    <!-- 2. Warehouse Control -->
+                    <!-- Warehouse Control -->
                     <div class="subitem">
                         <h4 class="subitem__title">Warehouse Control — система учёта складских операций</h4>
                         <p class="subitem_subtitle">
-                            Реализовал компактную систему управления запасами с прозрачным аудитом действий пользователей.
+                            Компактная система управления запасами с прозрачным аудитом действий пользователей и ролевой моделью доступа.
                         </p>
                         <ul class="item__list">
-                            <li>Настроил аутентификацию по JWT и разграничение прав через роли (администратор, менеджер, сотрудник склада).</li>
-                            <li>Сделал детальный журнал действий: кто, когда и какие изменения внёс в карточки товаров и остатки.</li>
-                            <li>Спроектировал модель данных так, чтобы поддерживать историю изменений по складам и пользователям.</li>
-                            <li>Реализовал базовые защитные механизмы: ограничение по числу запросов и валидацию входных данных на уровне API.</li>
+                            <li>Разработал механизм аудита, логирующий все изменения остатков и карточек товаров, что обеспечило прозрачность операций на складе и возможность восстанавливать историю действий по каждому пользователю.</li>
+                            <li>Реализовал ролевую модель доступа (администратор, менеджер, сотрудник склада) с аутентификацией по JWT для гранулярного контроля над CRUD‑операциями.</li>
+                            <li>Спроектировал модель данных с поддержкой истории изменений по складам и пользователям, включая операции прихода, расхода и корректировок.</li>
+                            <li>Добавил защитные механизмы на уровне API: валидацию входных данных и ограничение по числу запросов, снизив риск некорректных операций и базовых DoS‑сценариев.</li>
                         </ul>
                         <p class="item__stack">Стек: Go, PostgreSQL, JWT, Docker.</p>
                         <p class="subitem__link">
@@ -106,17 +129,17 @@
                         </p>
                     </div>
 
-                    <!-- 3. Image Processor -->
+                    <!-- Image Processor -->
                     <div class="subitem">
                         <h4 class="subitem__title">Image Processor — сервис фоновой обработки изображений</h4>
                         <p class="subitem_subtitle">
-                            Сконструировал сервис, который асинхронно обрабатывает изображения и подготавливает их для дальнейшего использования.
+                            Сервис асинхронной обработки изображений с отделением HTTP‑API от ресурсоёмких операций и независимым масштабированием воркеров.
                         </p>
                         <ul class="item__list">
-                            <li>Использовал Apache Kafka для очередей заданий на обработку изображений и разгрузки основного API.</li>
-                            <li>Реализовал операции изменения размера и генерации превью с сохранением артефактов в персистентное хранилище.</li>
-                            <li>Отделил слой обработки от слоя приёма запросов, чтобы можно было масштабировать воркеры независимо.</li>
-                            <li>Добавил валидацию входных данных (формат, размер файлов) и обработку типичных ошибок чтения/записи.</li>
+                            <li>Построил асинхронный пайплайн обработки изображений на базе Apache Kafka, отделив приём запросов от тяжёлых операций и позволив независимо масштабировать воркеры.</li>
+                            <li>Реализовал операции изменения размера и генерации превью с сохранением результатов в персистентное хранилище для дальнейшего использования другими сервисами.</li>
+                            <li>Вынес слой обработки в отдельный компонент, что упростило горизонтальное масштабирование и запуск отдельных пулов воркеров под разные типы задач.</li>
+                            <li>Реализовал graceful shutdown для воркеров, обеспечив корректное завершение текущих задач при остановке сервиса и обработку типичных ошибок чтения/записи файлов.</li>
                         </ul>
                         <p class="item__stack">Стек: Go, PostgreSQL, Kafka, Docker.</p>
                         <p class="subitem__link">
@@ -124,17 +147,17 @@
                         </p>
                     </div>
 
-                    <!-- 4. Order Service -->
+                    <!-- Order Service -->
                     <div class="subitem">
                         <h4 class="subitem__title">Order Service — микросервис управления заказами</h4>
                         <p class="subitem_subtitle">
-                            Спроектировал и реализовал сервис обработки заказов с акцентом на разделение доменной логики и инфраструктуры.
+                            Сервис обработки заказов с акцентом на разделение доменной логики и инфраструктуры и обмен доменными событиями.
                         </p>
                         <ul class="item__list">
-                            <li>Реализовал обмен доменными событиями по Apache Kafka для связи сервиса заказов с платежами и складом.</li>
-                            <li>Разделил код на уровни domain, application и infrastructure, что позволило писать модульные тесты без поднятия внешних сервисов.</li>
-                            <li>Описал контракт взаимодействия через чёткие DTO и явные topic’и, что упростило интеграцию с другими командами.</li>
-                            <li>Настроил конфигурацию и подключение к Kafka и БД через переменные окружения и Docker‑компоуз.</li>
+                            <li>Применил принципы Clean Architecture и разделение на слои domain, application и infrastructure, что позволило покрыть бизнес‑логику модульными тестами без поднятия БД и брокера сообщений.</li>
+                            <li>Спроектировал обмен доменными событиями по Kafka для интеграции сервиса заказов с платёжным сервисом и складом, используя чётко определённые DTO и топики.</li>
+                            <li>Реализовал идемпотентные консьюмеры Kafka для обработки доменных событий и защиты от повторной доставки сообщений, обеспечив корректное состояние заказов.</li>
+                            <li>Настроил конфигурацию подключения к БД и Kafka через переменные окружения и Docker‑compose, упростив локальный запуск и деплой.</li>
                         </ul>
                         <p class="item__stack">Стек: Go, PostgreSQL, Kafka, Redis, Docker.</p>
                         <p class="subitem__link">
@@ -142,25 +165,24 @@
                         </p>
                     </div>
 
-                    <!-- 5. Delayed Notifier -->
+                    <!-- Delayed Notifier -->
                     <div class="subitem">
                         <h4 class="subitem__title">Delayed Notifier — сервис планирования уведомлений</h4>
                         <p class="subitem_subtitle">
-                            Разработал сервис для отправки уведомлений по расписанию с контролем статуса доставки и повторными попытками.
+                            Сервис отправки уведомлений по расписанию с контролем статуса доставки, повторными попытками и несколькими каналами доставки.
                         </p>
                         <ul class="item__list">
-                            <li>Настроил использование RabbitMQ с плагином delayed message exchange для запуска уведомлений точно в заданный момент.</li>
-                            <li>Спроектировал механизм повторных отправок с увеличивающимся интервалом через DLX и отдельные retry‑очереди.</li>
-                            <li>Реализовал несколько каналов доставки (Email, Telegram) и управление жизненным циклом уведомлений: создание, перенос, отмена.</li>
-                            <li>Организовал обработку задач воркерами с учётом лимитов по количеству одновременных запросов к внешним сервисам.</li>
-                            <li>Добавил базовые метрики и логирование для отслеживания статуса доставки и проблемных сообщений.</li>
+                            <li>Настроил использование RabbitMQ с плагином delayed message exchange для точного запуска уведомлений в заданный момент без опроса БД и таймеров в приложении.</li>
+                            <li>Спроектировал механизм повторных отправок с увеличивающимся интервалом через DLX и отдельные retry‑очереди, повысив устойчивость к временным сбоям внешних сервисов.</li>
+                            <li>Реализовал несколько каналов доставки (Email, Telegram) и управление жизненным циклом уведомлений: создание, перенос, отмена и отслеживание статуса.</li>
+                            <li>Организовал обработку задач воркерами с учётом лимитов по количеству одновременных запросов к внешним API, снизив риск превышения квот и блокировок.</li>
+                            <li>Добавил базовые метрики и логирование для мониторинга статусов доставки и выявления проблемных сообщений.</li>
                         </ul>
                         <p class="item__stack">Стек: Go, PostgreSQL, Redis, RabbitMQ, Docker.</p>
                         <p class="subitem__link">
                             <a href="https://github.com/Heranuka/DelayedNotifier" target="_blank">GitHub: delayed-notifier</a>
                         </p>
                     </div>
-
                 </div>
             </article>
         </section>
@@ -206,8 +228,8 @@
                 </div>
             </article>
         </section>
-
     </main>
+
 </div>
 
 <script src="script.js"></script>
